--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -37,33 +37,7 @@ http {
 	##
 	# Gzip Settings
 	##
-
-	gzip on;
-	gzip_disable "msie6";
-
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-	##
-	# nginx-naxsi config
-	##
-	# Uncomment it if you installed nginx-naxsi
-	##
-
-	# include /etc/nginx/naxsi_core.rules;
-
-	##
-	# Phusion Passenger config
-	##
-	# Uncomment it if you installed passenger or passenger-enterprise
-	##
-	
-	# passenger_root /usr/lib/ruby/vendor_ruby/phusion_passenger/locations.ini;
-	# passenger_ruby /usr/bin/ruby;
+	gzip off;
 
 	##
 	# Virtual Host Configs
@@ -74,23 +48,3 @@ http {
 }
 
 
-# mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-# }
